<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPromo2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/promo_background"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_fotopromo"
            android:layout_width="361dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo_pordefecto"
            android:contentDescription="@string/fotoPromoEditar" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTituloPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clickable="false"
                    android:text="@string/promotion_name"
                    android:textColor="@color/light_blue_900"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTitleLocalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtLocalName"
                    android:textSize="14sp"
                    android:textStyle="normal" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/inicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:layout_marginEnd="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:layout_marginEnd="5dp"/>
                <TextView
                    android:id="@+id/fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEliminarPromo"
                    style="@style/MyButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/deletePromoCard"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_delete"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="16dp"
                    app:iconTint="#F44336"
                    app:strokeColor="#F44336"
                    tools:ignore="SmallSp,TextSizeCheck" />

                <Button
                    android:id="@+id/btnEditarPromo"
                    style="@style/MyButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editPromoCard"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_edit"
                    app:iconGravity="textStart"
                    app:iconSize="16dp"
                    app:iconTint="#4F8FD5"
                    app:strokeColor="#4F8FD5"
                    tools:ignore="SmallSp,TextSizeCheck" />
            </LinearLayout>
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>