<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".selectTypeUser">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="70dp"
        android:contentDescription="@string/txtContentDescriptionLogo"
        app:srcCompat="@drawable/logoapp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPregunta"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"

            android:textColor="@color/white"
            android:layout_width="165dp"
            android:layout_height="75dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="0.5"
            android:backgroundTint="#3EB4DA"
            android:text="@string/txtbtn1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"

            android:textColor="@color/white"
            android:layout_width="165dp"
            android:layout_height="75dp"
            android:layout_weight="0.5"
            android:backgroundTint="#3EB4DA"
            android:text="@string/txtbtn2"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>