<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".detalle_promo">

    <Button
        android:id="@+id/btnRHome"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:onClick="Regresar"
        android:text="@string/txtPromotions"
        android:textColor="@color/light_blue_900"
        android:textSize="20sp"
        app:icon="@drawable/ic_regresar"
        app:iconSize="30dp"
        app:iconTint="@color/light_blue_900"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="776dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="55dp"
            android:paddingRight="55dp">

            <TextView
                android:id="@+id/title_promotxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60sp"
                android:layout_marginBottom="10dp"
                android:text="@string/promotion_name"
                android:textAlignment="center"
                android:textColor="@color/verdeOscuro"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgDetallePromo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondo_pordefecto"
                android:contentDescription="@string/img_detallePromo" />

            <TextView
                android:id="@+id/txtLocalNameDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtLocalName"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCatDetallePromo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDescripDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/description_promotion"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStarPromoDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtEndPromoDe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>